修正： About画面の追加 トップ画面からAbout画面へ遷移できるようツールバーにボタンを追加 Aboutに各遷移先を追加 Easter Egg追加 SDカードへアプリを移動できるよう修正

--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">整備済Apple製品チェッカー</string>
-    <string name="syouhyou">iPod と iPad, Mac, iPhone は、米国および他の国々で登録されたApple Inc.の商標です。</string>
+    <string name="syouhyou">* iPod と iPad, Mac, iPhone は、米国および他の国々で登録されたApple Inc.の商標です。</string>
 
 
 </resources>
